Created json file storing created product system info more practically

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 OpenLCA/ecoinvent_371_cutoff_unit_20210104.zolca
 bwLCA/ecoinvent 3.8_cutoff_ecoSpold02
 bwLCA/ecoinvent 3.8_cutoff_lcia_ecoSpold02
+OpenLCA/Created_PS_refProcess.json
