--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ OpenLCA/ecoinvent_371_cutoff_unit_20210104.zolca
 bwLCA/ecoinvent 3.8_cutoff_ecoSpold02
 bwLCA/ecoinvent 3.8_cutoff_lcia_ecoSpold02
 OpenLCA/Created_PS_refProcess.json
+OpenLCA/21_Feb_2022_calc_results_GWP100a_test
+OpenLCA/21_Feb_2022_calc_results_GWP100a_test
