Improved the input method for list and excel

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@ bwLCA/ecoinvent 3.8_cutoff_ecoSpold02
 bwLCA/ecoinvent 3.8_cutoff_lcia_ecoSpold02
 OpenLCA/Created_PS_refProcess.json
 OpenLCA/21_Feb_2022_calc_results_GWP100a_test
-OpenLCA/21_Feb_2022_calc_results_GWP100a_test
+OpenLCA/Created_PS_refProcess.json
+OpenLCA/02_Mar_2022_GWP_100a
+OpenLCA/22_Feb_2022_calc_results_GWP100a_test
