Added results path in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ OpenLCA/Created_PS_refProcess.json
 OpenLCA/02_Mar_2022_GWP_100a
 OpenLCA/22_Feb_2022_calc_results_GWP100a_test
 OpenLCA/Created_PS_refProcess.json
+OpenLCA/06_Mar_2022_GWP_100a
