Debugged LCA calculation and SA

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ OpenLCA/02_Mar_2022_GWP_100a
 OpenLCA/22_Feb_2022_calc_results_GWP100a_test
 OpenLCA/Created_PS_refProcess.json
 OpenLCA/06_Mar_2022_GWP_100a
+C:\GitHUb\Git4\RA-SustainableConstruction\OpenLCA\Created_PS_refProcess.json
+C:\GitHUb\Git4\RA-SustainableConstruction\OpenLCA\SA_record.json
+OpenLCA\SA_record.json
