Renamed files. Drafted the function if there's an error during calculation which is to be tested.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ OpenLCA/06_Mar_2022_GWP_100a
 C:\GitHUb\Git4\RA-SustainableConstruction\OpenLCA\Created_PS_refProcess.json
 C:\GitHUb\Git4\RA-SustainableConstruction\OpenLCA\SA_record.json
 OpenLCA\SA_record.json
+OpenLCA/SA_record.json
+/Users/ocean/Desktop/RA-SustainableConstruction/OpenLCA/SA_record.json
