Debugged SA input without default provider. Added check impact method function.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ C:\GitHUb\Git4\RA-SustainableConstruction\OpenLCA\SA_record.json
 OpenLCA\SA_record.json
 OpenLCA/SA_record.json
 /Users/ocean/Desktop/RA-SustainableConstruction/OpenLCA/SA_record.json
+OpenLCA/SA_record.json
+OpenLCA/SA_record.json
